--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "babel-eslint": "8.2.1",
+    "dotenv": "^5.0.1",
     "eslint": "4.15.0",
     "eslint-config-standard": "10.2.1",
     "eslint-friendly-formatter": "3.0.0",
@@ -25,7 +26,11 @@
     "eslint-plugin-promise": "3.4.0",
     "eslint-plugin-standard": "3.0.1",
     "eslint-plugin-vue": "4.0.0",
-    "quasar-cli": "^0.15.6"
+    "node-sass": "^4.7.2",
+    "pug": "^2.0.0-rc.4",
+    "pug-loader": "^2.3.0",
+    "quasar-cli": "^0.15.6",
+    "sass-loader": "^6.0.6"
   },
   "engines": {
     "node": ">= 8.9.0",
