--- a/client/package.json
+++ b/client/package.json
@@ -11,25 +11,25 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
-    "axios": "^0.17.1",
-    "vue-i18n": "^7.3.3"
+    "axios": "^0.18.0",
+    "vue-i18n": "^7.6.0"
   },
   "devDependencies": {
-    "babel-eslint": "8.2.1",
+    "babel-eslint": "8.2.2",
     "dotenv": "^5.0.1",
-    "eslint": "4.15.0",
-    "eslint-config-standard": "10.2.1",
+    "eslint": "4.18.2",
+    "eslint-config-standard": "11.0.0",
     "eslint-friendly-formatter": "3.0.0",
-    "eslint-loader": "1.7.1",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-node": "5.2.0",
-    "eslint-plugin-promise": "3.4.0",
+    "eslint-loader": "2.0.0",
+    "eslint-plugin-import": "2.9.0",
+    "eslint-plugin-node": "6.0.1",
+    "eslint-plugin-promise": "3.7.0",
     "eslint-plugin-standard": "3.0.1",
-    "eslint-plugin-vue": "4.0.0",
-    "node-sass": "^4.7.2",
-    "pug": "^2.0.0-rc.4",
+    "eslint-plugin-vue": "4.3.0",
+    "node-sass": "^4.8.2",
+    "pug": "^2.0.1",
     "pug-loader": "^2.3.0",
-    "quasar-cli": "^0.15.6",
+    "quasar-cli": "^0.15.11",
     "sass-loader": "^6.0.6"
   },
   "engines": {
