server: different model for whitelist with passport

--- a/server/Makefile
+++ b/server/Makefile
@@ -36,6 +36,7 @@ deps:
 	$(GOGET) github.com/go-xorm/xorm
 	$(GOGET) github.com/go-xorm/core/...
 	$(GOGET) github.com/lib/pq/...
+	$(GOGET) github.com/mattn/go-sqlite3/...
 	$(GOGET) github.com/aws/aws-sdk-go/aws/...
 	$(GOGET) github.com/aws/aws-sdk-go/aws/session/...
 	$(GOGET) github.com/aws/aws-sdk-go/service/ses/...
